--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-wrap: wrap;
   margin-top: 35px;
+  margin-bottom: 35px;
   max-width: 1200px;
   margin-left: 20px;
   margin-right: 20px;
